test/parser/bad/include_expect_string.ulm
.include a_string_is_expected

.text
main: nop
